--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,11 @@ li{
         max-width: 116rem;
     }
 }
+@media screen and (min-width: 87.5em) { /* eq 1400px */
+    .container {
+        max-width: 120rem;
+    }
+}
 
 .container-narrower {
     max-width: 42rem;
@@ -154,8 +159,16 @@ h2{
 
 .container-logo{
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     padding-bottom: 3.2rem;
+}
+@media screen and (min-width:36em) {
+    .container-logo{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 .logo{
     display: grid;
@@ -195,7 +208,68 @@ nav{
     font-size: 14px;
     font-weight: 700;
 }
+.toggle-menu {
+    padding: 0.25rem 1rem;
+    color: var(--inverted);
+    background-color: rgba(0,0,0,.15);
+    border: 0;
+    border-radius: 2rem;
+    transition: .3s;
+}
 
+.toggle-menu:hover,
+.toggle-menu:focus {
+    background-color: rgba(0,0,0,.35);
+}
+
+
+.menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background-color: var(--accent);
+    transition: .5s;
+}
+
+.menu[hidden] {
+    display: block;
+    visibility: hidden;
+    transform: translateX(-100%);
+}
+
+.menu:not([hidden]) {
+    transform: translateX(0);
+}
+
+.menu-link {
+    display: block;
+    padding: 1.6rem;
+    font-size: 1.4rem;
+    line-height: 1.2;
+    color: #fff;
+    text-decoration: none;
+    transition: .3s;
+}
+
+.menu-link:hover,
+.menu-link:focus {
+    background-color: rgba(0,0,0,.25);
+}
+
+@media screen and (min-width: 62em) { /* Indiquer les mesures en em avec une base de 16px - Ex : 576/16 = 36em*/
+    .toggle-menu {
+        display: none;
+    }
+
+    .menu,
+    .menu[hidden] {
+        display: flex;
+        visibility: visible;
+        position: static;
+        transform: translateX(0);
+    }
+}
 /* Hero */
 .hero{
     min-height: 96rem;
@@ -213,34 +287,54 @@ nav{
     padding-top: 40.3rem;
 }
 .sliders-div{
-    display: flex;
-    justify-content: space-between;
+    display: none;
+}
+@media screen and (min-width: 62em) {
+    .sliders-div{
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        width: 100%;
+        bottom: 37rem;
+    }
 }
 .sliders-div button{
     border: none;
     background-color: transparent;
 }
+.sliders-div button img:hover,
+.sliders-div button img:focus{
+    border: inherit;
+    background-color: black;
+    
+    box-shadow: 5px 8px 15px rgba(0, 0, 0, 0.1);
+}
 .container-hero p {
+    text-align: center;
+    max-width: 104.8rem;
     margin-top: 5rem;
     font-size: 32px;
     line-height: 1;
-    margin-right: 15rem;
-    margin-left: 15rem;
+    margin-right: auto;
+    margin-left: auto;
 }
 .buttons-nav{
-    display: flex;
-    justify-content: center;
     margin-top: 23rem;
     margin-bottom: 8rem;
 }
 .nav-button{
     border: var(--dark);
     background-color: var(--dark);
+    border-radius: 0;
     padding: .5rem;
     margin-left: .5rem;
     margin-right: .5rem;
 }
-
+.nav-button:hover,
+.nav-button:focus{
+    border: var(--orange);
+    background-color: var(--orange);
+}
 /* Features */
 
 .features{
@@ -263,8 +357,19 @@ nav{
 .all-services{
     display: grid;
     column-gap: 4rem;
-    grid-template-columns: repeat(4, 1fr);
-    max-height:  30rem;
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 25rem;
+}
+@media screen and (min-width:48em) {
+    .all-services{
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+}
+@media screen and (min-width:62em) {
+    .all-services{
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 .service{
     display: flex;
@@ -328,15 +433,27 @@ nav{
     margin-bottom: 11.5rem;
 }
 .latest-posts-nav{
-    justify-content: right;
+    justify-content: center;
 }
 .list-l-p{
     display: grid;
-    grid-template-columns: repeat(3 , 1fr);
+    grid-template-columns: repeat(1 , 1fr);
     column-gap: 2.5rem;
     row-gap: 10rem;
     list-style: none;
     margin-bottom: 18.3rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+}
+@media screen and (min-width: 48em) { /*  */
+    .list-l-p {
+        grid-template-columns: repeat(2 , 1fr);
+    }
+}
+@media screen and (min-width: 75em) { /*  */
+    .list-l-p {
+        grid-template-columns: repeat(3 , 2fr);
+    }
 }
 .list-item-l-p{
     box-shadow: 0px 3px 6px var(--gris-pale2);
@@ -384,6 +501,7 @@ nav{
     margin-top: 5rem;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .funfact-element{
     display: flex;
@@ -411,8 +529,15 @@ nav{
     display: flex;
     align-items: center;
     position: relative;
-    margin-bottom: 12rem;
-    
+    margin-bottom: 30rem;
+}
+@media screen and (min-width:48em) {
+    .testimonials-div-principal{
+        display: flex;
+        align-items: center;
+        position: relative;
+        margin-bottom: 12rem;
+    }
 }
 .testimonials-div-principal img{
     width: 22rem;
@@ -432,7 +557,19 @@ nav{
     font-weight: 700;
     color: white;
     position:absolute;
-    top: 0;
+    top: -5rem;
+    line-height: 1.2;
+}
+@media screen and (min-width:48em) {
+    .testimonials-txt h3{
+        font-family: 'Raleway', 'open-sans';
+        font-size: 4.8rem;
+        font-weight: 700;
+        color: white;
+        position:absolute;
+        top: 0;
+        line-height: 1.2;
+    }
 }
 .testimonials-txt p{
     font-size: 2.2rem;
@@ -455,9 +592,23 @@ footer{
 }
 .footer-list{
     display: grid;
-    gap: 1;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 1rem;
     margin-left: -4rem;
+}
+@media screen and (min-width: 75em) {
+    .footer-list{
+        display: grid;
+        grid-template-rows: repeat(4, 1fr);
+        row-gap: 1rem;
+        margin-left: -4rem;
+    }
+}
+@media screen and (min-width: 75em) {
+    .footer-list{
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 2rem;
+    }
 }
 .footer-list-item{
     text-align: left;
